# ffmpeg-wasm32-wasi

./: .gitignore  README.md  build.sh  build_ffmpeg.sh  build_ffmpeg_examples.sh  modify.patch
rust-examples/: Cargo.toml
rust-examples/.cargo/: config.toml
rust-examples/decode-audio/: Cargo.toml
rust-examples/decode-audio/src/: main.rs
rust-examples/ffmpeg-next-examples/: Cargo.toml  README.md
